# rustcode

./: Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
examples/: 1_hello.rs  2_pointer.rs  3_keywords.rs  4_struct_enum.rs  5_pattern_matching.rs  6_collections.rs
