[package]
name = "rustcode"
version = "0.1.0"
authors=["Yuno"]
edition = "2024"
rust-version="1.88.0"
description="A Repo about The Rust Programming Language"
documentation=""
readme="./README.md"
# homepage =""
# repository =""
license = "MIT OR Apache-2.0"
# license-file =""
keywords = ["rust", "code","practice"]
# categories =[""]
# workspace =""
# build =""
# links =""
# exclude =[""]
# include =[""]
# publish =false
# autolib = false
# autobins = false
# autoexamples = false
# autotests = false
# autobenches = false
# resolver = "3"
[dependencies]

